--- a/app.json
+++ b/app.json
@@ -29,9 +29,19 @@
 			[
 				"expo-splash-screen",
 				{
-					"image": "./assets/images/splash-icon.png",
+					"image": "./assets/images/icon.png",
 					"resizeMode": "cover",
-					"backgroundColor": "#ffffff"
+					"imageWidth": "159",
+					"backgroundColor": "#18658B"
+
+				}
+			],
+			[
+				"expo-camera",
+				{
+					"cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to take a picture for identity verification",
+					"microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+					"recordAudioAndroid": false
 				}
 			]
 		],
