--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -39,12 +38,16 @@
     "react-native": "0.76.5",
     "react-native-country-codes-picker": "^2.3.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-otp-entry": "^1.8.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "expo-camera": "~16.0.10",
+    "expo-face-detector": "~13.0.1",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
