Refactors layout components and adds new screens for profile, search, and history; updates app configuration and adds new SVG icons.

--- a/app.json
+++ b/app.json
@@ -31,9 +31,8 @@
 				{
 					"image": "./assets/images/icon.png",
 					"resizeMode": "cover",
-					"imageWidth": "159",
-					"backgroundColor": "#18658B"
-
+					"backgroundColor": "#18658B",
+					"imageWidth": "159"
 				}
 			],
 			[
