Enhance app infrastructure with global state management, location services, and query handling
- Add QueryProvider and GlobalStateProvider for improved state management
- Implement useUserLocation and useAsyncStorage hooks
- Update authentication and signup flows with new providers
- Add location permissions for iOS and Android
- Introduce AnimatedPulse component for loading states
- Refactor various components and screens to use new providers and hooks
- Update package dependencies and configuration files

--- a/app.json
+++ b/app.json
@@ -5,12 +5,16 @@
 		"version": "1.0.0",
 		"orientation": "portrait",
 		"icon": "./assets/images/icon.png",
-		"scheme": "myapp",
+		"scheme": "dongi",
 		"userInterfaceStyle": "automatic",
 		"newArchEnabled": true,
 		"ios": {
 			"supportsTablet": true,
-			"bundleIdentifier": "com.dongi.dongi"
+			"bundleIdentifier": "com.dongi.dongi",
+			"infoPlist": {
+				"NSLocationWhenInUseUsageDescription": "This app needs access to location services to show you nearby places.",
+				"NSLocationAlwaysAndWhenInUseUsageDescription": "This app needs access to location services to show you nearby places and provide background navigation."
+			}
 		},
 		"android": {
 			"adaptiveIcon": {
