--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@shopify/react-native-skia": "^1.11.6",
     "@tanstack/react-query": "^5.65.1",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
@@ -28,6 +29,7 @@
     "expo-blur": "~14.0.1",
     "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
+    "expo-document-picker": "~13.0.3",
     "expo-face-detector": "~13.0.1",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
@@ -62,7 +64,8 @@
     "react-native-webview": "13.12.5",
     "sonner-native": "^0.16.2",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "expo-dev-client": "~5.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
