--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "expo-face-detector": "~13.0.1",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
-    "expo-image-picker": "~16.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.5",
     "expo-router": "~4.0.15",
@@ -65,7 +65,8 @@
     "sonner-native": "^0.16.2",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1",
-    "expo-dev-client": "~5.0.11"
+    "expo-dev-client": "~5.0.11",
+    "expo-image-manipulator": "~13.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
