Add .easignore file, update package dependencies, and enhance service history functionality
- Introduce .easignore to exclude unnecessary files from the build
- Update package dependencies for improved stability and performance
- Implement data fetching for completed and ongoing services in the history tab
- Refactor components to utilize new data structures and improve user experience
- Enhance form validation in email sign-in and service addition components
- Update AndroidManifest.xml to support new URL schemes

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="dongi"/>
         <data android:scheme="com.dongi.dongi"/>
+        <data android:scheme="exp+dongi"/>
       </intent-filter>
     </activity>
   </application>
