--- a/package.json
+++ b/package.json
@@ -21,35 +21,36 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "@shopify/react-native-skia": "^1.11.6",
+    "@shopify/react-native-skia": "1.5.0",
     "@tanstack/react-query": "^5.65.1",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
-    "expo": "~52.0.23",
-    "expo-blur": "~14.0.1",
-    "expo-camera": "~16.0.10",
+    "expo": "~52.0.46",
+    "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.11",
+    "expo-dev-client": "~5.0.20",
     "expo-document-picker": "~13.0.3",
-    "expo-face-detector": "~13.0.1",
+    "expo-face-detector": "~13.0.2",
     "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
+    "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
-    "expo-linking": "~7.0.3",
-    "expo-location": "~18.0.5",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.10",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.2",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.6",
+    "react-native": "0.76.9",
     "react-native-country-codes-picker": "^2.3.5",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -74,9 +75,10 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.3.3"
